[package]
name = "sonic_serde_macros"
version = "0.1.0"
edition = "2021"
description = "Macros used in sonic_serde_object"
license-file = "LICENSE"
repository = "https://github.com/sonicrules1234/sonic_serde_macros"
readme = "README.md"
homepage = "https://github.com/sonicrules1234/sonic_serde_macros"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
